<?xml version="1.0"?>
<package format="3">
    <name>yasmin_plugins</name>
    <version>3.3.0</version>
    <description>YASMIN plugin loader for C++ and Python</description>
    <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
    <license>GPL-3</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_python</buildtool_depend>
    <depend>pluginlib</depend>
    <depend>class_loader</depend>
    <depend>rclcpp</depend>
    <depend>yasmin</depend>
    <exec_depend>python3</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>